--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +20,8 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "moment": "^2.23.0",
-    "mongoose": "^5.4.2"
+    "mongoose": "^5.4.2",
+    "morgan": "^1.9.1",
+    "node-cron": "^2.0.3"
   }
 }
